test/error/E39.chimod
{
	"dependencies": 213,
	"has_c_support": false
}
